# pacman_kursovaya

./: CMakeLists.txt  README.md  main.cpp  Католиков Никита КМБО-02-21 ПАКМАН ТЗ.docx  про код.docx
